# fastapi-docker-github-actions

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
assets/: fastapi-docker-github-actions.drawio
src/: Dockerfile  main.py  requirements.txt
tests/unit/: test_main.py
